# HexaNavigator

./: .ruff.toml  README.md  clean_pycache.sh  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  main.py
src/config/: default.yaml  sensors.yaml
src/core/: controllers.py  state_machine.py  types.py
src/mavlink/: __init__.py  server.py  telemetry.py
src/mission/: qgc_plan_loader.py  waypoint_manager.py
src/robot/: api_interface.py  rpc_client.py
src/sensors/: gps.py  imu.py  lidar.py
src/utils/: geo.py  logging_setup.py
tests/: conftest.py  test.plan  test_geo.py  test_mavlink_server.py  test_pure_pursuit.py  test_qgc_plan_loader.py  test_virtual_robot_mission.py
